[tool.poetry]
name = "ahc016"
version = "0.1.0"
description = ""
authors = ["nahco314 <nahco3_ta@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.scripts]
t = "tools.py.main:main"
stat = "tools.py.statistics:main"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}
black = "^22.10.0"
isort = "^5.10.1"
compatibilityer = "^0.3.8"
networkx = "^2.8.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
force_single_line = true
